--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <input type="radio" name="venue" value="no"> No
             </label><br>
             <label>
-                <input type="radio" name="venue" value="unknown" checked> Unknown
+                <input type="radio" name="venue" value="unknown" checked> We don't know yet
             </label>
         </div>
 
@@ -66,13 +66,12 @@
 
     <!-- Collapsible section for app explanation -->
 <div id="infoSection" style="display: none; margin-top: 10px;">
-    <p>This app helps us coordinate our weekly poker games. Here's how to use it:</p>
+    <p>This little app helps us coordinate our weekly poker games. Here's how to use it:</p>
     <ul>
         <li>Enter the password to gain access to the app. Good job, you did it!</li>
-        <li>Once inside, you can see the upcoming poker game date.</li>
-        <li>Check and see if the venue is available this week. If you're sure the wrong button is checked, feel free to fix it.</li>
-        <li>Reserve seats by adding player name(s). If you're not sure you're coming, please use an "alternate" slot.</li>
-        <li>Even if the venue is not marked as available, feel free to express interest by adding names. Just be sure it's on before you show up :-) </li>
+        <li>Check and see if our game is on this week. If you're sure the wrong button is checked, feel free to fix it.</li>
+        <li>Reserve a seat by adding your name to an empty slot. If you're not sure you're coming, please use an "alternate" slot.</li>
+        <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
     </ul>
 </div>
