--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
     </ul>
-    <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how, plus bonus poker tips!</a></p>
+    <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how. Scroll to the end for five hot poker tips!</a></p>
 </div>
 <button id="toggleInfo" style="display:none; margin-top: 20px;">What is this?</button>
     
