--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Password Form -->
     <div id="passwordForm">
-        <input type="password" id="passwordInput" placeholder="Enter Password">
+        <input type="password" id="passwordInput" placeholder="password">
         <button id="submitPassword">Enter</button>
         <p id="error" style="color:red;">Incorrect password</p>
     </div>
