--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Main App -->
     <div id="app">
-        <h2>Date: <span id="gameDate"></span> 7 PM</h2>
+        <h2><span id="gameDate"></span> 7 PM</h2>
 
         <!-- Venue Availability -->
         <h4>Are we playing this week?</h4>
