--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div id="infoSection" style="display: none; margin-top: 10px;">
     <p>This little app helps us coordinate our weekly poker games. Here's how to use it:</p>
     <ul>
-        <li>Enter the password to gain access to the app. Good job, you did it!</li>
+        <li>Enter the password to gain access. Good job, you did it!</li>
         <li>Check and see if our game is on this week. If you're sure the wrong button is checked, feel free to fix it.</li>
         <li>Reserve a seat by adding your name to an empty slot. If you're not sure you're coming, please use an "alternate" slot.</li>
         <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back to be sure the game is on before you show up :-) </li>
