--- a/index.html
+++ b/index.html
@@ -74,7 +74,27 @@
         <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
     </ul>
-    <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how. Scroll to the end for five hot poker tips!</a></p>
+    <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
+    <div id="poker-tips" style="margin-top: 20px;">
+    <h3>Five Tips for Enjoying a Small-Stakes Cash Game of Texas Hold'em, by ChatGPT 4o</h3>
+    <ol>
+        <li>
+            <strong>Play More for the Experience, Less for the Profit</strong>: The goal is to have fun! Small-stakes games are perfect for experimenting with strategies and enjoying the social aspect of poker. Don’t get too caught up in the wins and losses—focus on the fun of the game.
+        </li>
+        <li>
+            <strong>Loosen Up and Mix It Up</strong>: In small-stakes games, people tend to play more hands. Feel free to loosen up and play a wider variety of starting hands—this creates unpredictability and keeps the game lighthearted. Just remember not to over-commit to weaker hands.
+        </li>
+        <li>
+            <strong>Bluff with Caution</strong>: Players at small-stakes tables are often more likely to call a bet, even when they're not holding strong hands. That means while a well-timed bluff can be effective, it’s important to bluff sparingly and pick your spots carefully.
+        </li>
+        <li>
+            <strong>Be Mindful of the Social Dynamic</strong>: One of the best things about a home cash game is the social interaction. Enjoy conversations and keep the mood relaxed. Light banter can go a long way in making the game more enjoyable for everyone, even when the cards don’t go your way.
+        </li>
+        <li>
+            <strong>Don’t Chase</strong>: One classic mistake at small-stakes games is chasing hands (staying in with a weak hand hoping for a miracle card). Keep things fun by knowing when to fold and recognizing that there’s always another hand coming. Patience pays off!
+        </li>
+    </ol>
+</div>
 </div>
 <button id="toggleInfo" style="display:none; margin-top: 20px;">What is this?</button>
     
