--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </ul>
     <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
     <div id="poker-tips" style="margin-top: 20px;">
-    <h3>Five Tips for Enjoying a Small-Stakes Cash Game of Texas Hold'em, by ChatGPT 4o</h3>
+    <h3>Five Tips for Enjoying a Small-Stakes Cash Game of Texas Hold'em, by ChatGPT</h3>
     <ol>
         <li>
             <strong>Play More for the Experience, Less for the Profit</strong>: The goal is to have fun! Small-stakes games are perfect for experimenting with strategies and enjoying the social aspect of poker. Don’t get too caught up in the wins and losses—focus on the fun of the game.
