--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <h2><span id="gameDate"></span>, 7 PM</h2>
     <!-- Collapsible section for app explanation -->
 <div id="infoSection" style="display: none; margin-top: 10px;">
-    <p>This little app helps us coordinate our weekly poker games. Here's how to use it:</p>
+    <p>This little app helps us to coordinate our weekly poker games. Here's how to use it:</p>
     <ul>
         <li>Enter the password to gain access. Good job, you did it!</li>
-        <li>Check and see if our game is on this week. If you're sure the wrong button is checked, feel free to fix it.</li>
-        <li>Reserve a seat by adding your name to an empty slot. If you're not sure you're coming, please use an "alternate" slot.</li>
-        <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back to be sure the game is on before you show up :-) </li>
+        <li>Check and see whether our game is on this week. If you're sure that the wrong button is checked, feel free to update it.</li>
+        <li>Reserve a seat by adding your name to an empty slot. If you're not sure whether you're coming, please use an "alternate" slot.</li>
+        <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back here to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
     </ul>
     <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
