--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>This little app helps us to coordinate our weekly poker games. Here's how to use it:</p>
     <ul>
         <li>Enter the password to gain access. Good job, you did it!</li>
-        <li>Check and see whether our game is on this week. If you're sure that the wrong button is checked, feel free to update it.</li>
+        <li>Check and see whether our game is happening this week. If you're sure that the wrong button is checked, feel free to update it.</li>
         <li>Reserve a seat by adding your name to an empty slot. If you're not sure whether you're coming, please use an "alternate" slot.</li>
         <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back here to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
