--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li>Enter the password to gain access. Good job, you did it!</li>
         <li>Check and see whether our game is happening this week. If you're sure that the wrong button is checked, feel free to update it.</li>
         <li>Reserve a seat by adding your name to an empty slot. If you're not sure whether you're coming, please use an "alternate" slot.</li>
-        <li>Even if it's not clear whether the game is on this week, feel free to express interest by adding your name. Just come back here to be sure the game is on before you show up :-) </li>
+        <li>Even if it's not clear whether we are gathering this week, feel free to express interest by adding your name. Just come back here to be sure the game is on before you show up :-) </li>
         <li>Click "Save" to submit your updates.</li>
     </ul>
     <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
