--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </ol>
 </div>
 </div>
-<button id="toggleInfo" style="display:none; margin-top: 20px;">What is this?</button>
+<button id="toggleInfo" style="display:none; margin-top: 20px;">Info/House Rules</button>
 
         <!-- Venue Availability -->
         <h4>Are we playing this week?</h4>
