--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ document.getElementById('toggleInfo').addEventListener('click', function() {
         this.textContent = 'Hide Info';  // Change button text
     } else {
         infoSection.style.display = 'none';  // Hide the info section
-        this.textContent = 'What is this?';  // Reset button text
+        this.textContent = 'Thanks for reading it :-)';  // Reset button text
     }
 });
         
