--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
     <h3>House Rules</h3>
     <ul>
-        <li><strong>Please do not share the password for this page.</strong> This is not a public game and we don't invite just anyone. We get together because we like each other and because we need the interaction.</li>
+        <li><strong>Please do not share the password for this page.</strong> This is not a public game and we don't invite just anyone. We get together because we like each other and because the weekly interaction deepens our network of friendships.</li>
         <li><strong>Alcohol:</strong> there may be people at the table who prefer to play an alcohol-free game. If you bring alcohol, discuss it with the group before you open it. No means no.</li>
         <li><strong>BYO:</strong> the game is held in a business after hours. The cash register is closed and no snacks or beverages are available for sale. (If you bring something interesting, a trade is possible.)</li>
         <li><strong>The Poker Paradox:</strong> Poker is a merciless game where the point is to bankrupt your opponents. Also, we are friends, we are nourished by each others' company and by the freedom to be our authentic selves on Monday nights, and we care and look out for each other. We do our best to navigate these competing truths. One way we do this is by trusting each other not to join the game with money we cannot afford to lose. (Reducing the stakes is always an open discussion.) Another way we navigate the poker paradox is by holding space for any of us to feel and express our authentic feelings when a hand does or doesn't go somebody's way. That's poker.</li>
