New option need more players

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <input type="radio" name="venue" value="yes"> Yes
             </label><br>
             <label>
+                <input type="radio" name="venue" value="needmore"> Yes, if there are enough players
+            </label><br>
+            <label>
                 <input type="radio" name="venue" value="no"> No
             </label><br>
             <label>
