--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
         <li><strong>Please do not share the password for this page.</strong> This is not a public game and we don't invite just anyone. We get together because we like each other and because the weekly interaction deepens our network of friendships.</li>
         <li><strong>Alcohol:</strong> there may be people at the table who prefer to play an alcohol-free game. If you bring alcohol, discuss it with the group before you open it. No means no.</li>
         <li><strong>BYO:</strong> the game is held in a business after hours. The cash register is closed and no snacks or beverages are available for sale. (If you bring something interesting, a trade is possible.)</li>
-        <li><strong>The Poker Paradox:</strong> Poker is a merciless game where the point is to bankrupt your opponents. Also, we are friends, we are nourished by each others' company and by the freedom to be our authentic selves on Monday nights, and we care and look out for each other. We do our best to navigate these competing truths. One way we do this is by trusting each other not to join the game with money we cannot afford to lose. (Reducing the stakes is always an open discussion.) Another way we navigate the poker paradox is by holding space for any of us to feel and express our authentic feelings when a hand does or doesn't go somebody's way. That's poker.</li>
+        <li><strong>The Poker Paradox:</strong> Poker is a merciless game where the point is to bankrupt your opponents. Also, we are friends, we are nourished by each others' company and by the freedom to be our authentic selves on Monday nights, and we care and look out for each other. We do our best to navigate these competing truths. One way we do this is by trusting each other not to join the game with money we cannot afford to lose. We'll mix up the betting rules sometimes too; see below. Another way we navigate the poker paradox is by holding space for any of us to feel and express our authentic feelings when a hand does or doesn't go somebody's way. That's poker.</li>
     </ol>
+    
+    <h3>Three Common Betting Approaches in Poker</h3>
+<p>We'll choose one of these when we begin and stick with it all night. Feel free to express your preference when signing up.</p>
+    <h4>1. Limit Betting</h4>
+    <p>
+        <strong>Bet Size:</strong> Pre-determined and fixed; bets and raises must be made in specific increments (e.g., the 10¢ big blind).<br>
+        <strong>Number of Raises:</strong> Capped (e.g., 4 raises per betting round).<br>
+        <strong>Risk:</strong> Lower risk, as bets are predictable and limited in size.<br>
+        <strong>Playstyle:</strong> Encourages more strategic play and pot control.
+    </p>
+
+    <h4>2. Pot Limit</h4>
+    <p>
+        <strong>Bet Size:</strong> Bets and raises can range from the table minimum (10¢) to the current size of the pot (including your call).<br>
+        <strong>Calculation:</strong> The maximum raise is the pot size after your call.<br>
+        <strong>Risk:</strong> Medium risk, as bets can escalate quickly but remain tied to the pot size.<br>
+        <strong>Playstyle:</strong> Adds flexibility while still limiting overly aggressive play.
+    </p>
+
+    <h4>3. No Limit</h4>
+    <p>
+        <strong>Bet Size:</strong> Bets and raises can be any amount, up to the total chips a player has.<br>
+        <strong>All-In:</strong> Players can go "all-in" at any time.<br>
+        <strong>Risk:</strong> Highest risk; players can lose their entire stack in a single hand.<br>
+        <strong>Playstyle:</strong> Dramatic and aggressive, with significant bluffing and pressure strategies.
+    </p>
+
+    
     <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
     <div id="poker-tips" style="margin-top: 20px;">
     <h3>Five Tips for Enjoying a Small-Stakes Cash Game of Texas Hold'em, by ChatGPT</h3>
