Update index.html. Bet limit text

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
     
     <h3>Three Common Betting Approaches in Poker</h3>
 <p>We'll choose one of these when we begin and stick with it all night. Feel free to express your preference when signing up.</p>
-    <h4>1. Limit Betting</h4>
+    <h4>1. Limit Poker</h4>
     <p>
-        <strong>Bet Size:</strong> Pre-determined and fixed; bets and raises must be made in specific increments (e.g., the 10¢ big blind).<br>
+        <strong>Bet Size:</strong> Pre-determined and fixed; bets and raises are the big blind pre- and post-flop, twice the big blind turn and river.<br>
         <strong>Number of Raises:</strong> Capped (e.g., 4 raises per betting round).<br>
         <strong>Risk:</strong> Lower risk, as bets are predictable and limited in size.<br>
         <strong>Playstyle:</strong> Encourages more strategic play and pot control.
     </p>
 
-    <h4>2. Pot Limit</h4>
+    <h4>2. Pot Limit Poker</h4>
     <p>
-        <strong>Bet Size:</strong> Bets and raises can range from the table minimum (10¢) to the current size of the pot (including your call).<br>
+        <strong>Bet Size:</strong> Bets and raises can range from the table minimum (10¢ big blind) to the current size of the pot (including your call).<br>
         <strong>Calculation:</strong> The maximum raise is the pot size after your call.<br>
         <strong>Risk:</strong> Medium risk, as bets can escalate quickly but remain tied to the pot size.<br>
         <strong>Playstyle:</strong> Adds flexibility while still limiting overly aggressive play.
