Update index.html pot limit

--- a/index.html
+++ b/index.html
@@ -31,36 +31,35 @@
     <h3>House Rules</h3>
     <ol>
         <li><strong>Please do not share the password for this page.</strong> This is not a public game and we don't invite just anyone. We get together because we like each other and because the weekly interaction deepens our network of friendships.</li>
-        <li><strong>Alcohol:</strong> there may be people at the table who prefer to play an alcohol-free game. If you bring alcohol, discuss it with the group before you open it. No means no.</li>
         <li><strong>BYO:</strong> the game is held in a business after hours. The cash register is closed and no snacks or beverages are available for sale. (If you bring something interesting, a trade is possible.)</li>
-        <li><strong>The Poker Paradox:</strong> Poker is a merciless game where the point is to bankrupt your opponents. Also, we are friends, we are nourished by each others' company and by the freedom to be our authentic selves on Monday nights, and we care and look out for each other. We do our best to navigate these competing truths. One way we do this is by trusting each other not to join the game with money we cannot afford to lose. We'll mix up the betting rules sometimes too; see below. Another way we navigate the poker paradox is by holding space for any of us to feel and express our authentic feelings when a hand does or doesn't go somebody's way. That's poker.</li>
+        <li><strong>The Poker Paradox:</strong> Poker is a merciless game where the point is to bankrupt your opponents. Also, we are friends, we are nourished by each others' company and by the freedom to be our authentic selves on Monday nights, and we care and look out for each other. We do our best to navigate these competing truths. One way we do this is by trusting each other not to join the game with money we cannot afford to lose. Another way we navigate the poker paradox is by holding space for any of us to feel and express our authentic feelings when a hand does or doesn't go somebody's way. That's poker.</li>
     </ol>
     
-    <h3>Three Common Betting Approaches in Poker</h3>
-<p>We'll choose one of these when we begin and stick with it all night. Feel free to express your preference when signing up.</p>
-    <h4>1. Limit Poker</h4>
-    <p>
-        <strong>Bet Size:</strong> Pre-determined and fixed; bets and raises are the big blind pre- and post-flop, twice the big blind turn and river.<br>
-        <strong>Number of Raises:</strong> Capped (e.g., 4 raises per betting round).<br>
-        <strong>Risk:</strong> Lower risk, as bets are predictable and limited in size.<br>
-        <strong>Playstyle:</strong> Encourages more strategic play and pot control.
-    </p>
+    <h3>Pot-Limit Hold-Em</h3>
 
-    <h4>2. Pot Limit Poker</h4>
-    <p>
-        <strong>Bet Size:</strong> Bets and raises can range from the table minimum (10¢ big blind) to the current size of the pot (including your call).<br>
-        <strong>Calculation:</strong> The maximum raise is the pot size after your call.<br>
-        <strong>Risk:</strong> Medium risk, as bets can escalate quickly but remain tied to the pot size.<br>
-        <strong>Playstyle:</strong> Adds flexibility while still limiting overly aggressive play.
-    </p>
+    <p>We seem to prefer pot limit Texas Hold-em. "Pot limit" is a happy medium between strict "limit poker" and the wild chaos of no limit poker. When a betting round reaches you, you'll have as many as four options:</p> 
 
-    <h4>3. No Limit</h4>
-    <p>
-        <strong>Bet Size:</strong> Bets and raises can be any amount, up to the total chips a player has.<br>
-        <strong>All-In:</strong> Players can go "all-in" at any time.<br>
-        <strong>Risk:</strong> Highest risk; players can lose their entire stack in a single hand.<br>
-        <strong>Playstyle:</strong> Dramatic and aggressive, with significant bluffing and pressure strategies.
-    </p>
+<ol>
+    <LI>><strong>Check.</strong> Tapping the table is a shortcut for this. It means "no bet." If someone before you made a bet during this betting round, then you aren't allowed to check.</LI>
+    <li><strong>Call.</strong> If someone before you placed a bet, then to "call" is to wager the minimum amount that you must commit in order to stay in the hand, which is whatever the amount of the last bet made ahead of you was. </li>
+    <li><strong>Raise.</strong> If you decide to commit more chips than the minimum required to stay in a hand, that's a raise. Your raise must be between the minimum and the maximum permitted amounts; more on this below. </li>
+    <LI>Fold.</strong> If someone ahead of you has made a bet that is more than you want to commit, you don't have to call or raise. You can instead relinquish your cards and sit this one out. It's normal to fold most of the hands you are dealt, even before the flop. Pro tip: don't fold when you can check. </LI>
+</ol>
+
+<strong>How much can you raise?</strong> First, it's important to understand that the term "raise" refers to the increment <i>above</i> what your call would have been; it isn't necessarily the same as the total bet you're making. For example, if the action is to Frank at 10 and he bets 30, then he has raised by 20. Keep this in mind as we consider minimum and maximum raises in pot limit poker. 
+
+    <ul>
+<li><strong>Your raise must be large enough to meaningfully increase the action.</strong> If you are making the first bet in a round, your bet must be at least the size of the big blind. If someone has raised ahead of you, then your raise must not be smaller than the previous raise. For example, Neil opens with 20¢ and Mick makes it 50, a raise of 30. Arlie doesn't have to re-raise but if he does, he must raise by no less than 30--the amount of the prior raise--to 80.</li>
+<LI><strong>"Pot limit" means your *raise* cannot exceed what the total size of the pot would have been <u>had you merely called</u>.</strong> We need to remember that a raise is an <i>increment</i>, not a total bet amount. For example, in the simplest case let's say Corey is first to act pre-flop after the small and big blinds, which are 5 and 10. Corey wants to raise. If he merely calls 10, the pot would total the existing blinds (5+10) plus his call of 10, totaling 25. This (25) is the maximum he can raise <i>above</i> what a call would have been (10), which he does for a total bet of 35.<BR><BR>Wynn is next, with the option to call 35, fold, or re-raise. He's a whale with pocket aces and wants to bet the maximum. The maximum raise amount is what the pot would be after Wynn's call, which is 5+15+35+35=90. Wynn adds a raise of 90 to his call of 35, for a total bet of 125. </LI>
+    </ul>
+
+    In practice, it may be daunting at first to figure out how much you can bet in pot-limit. Here's how to make it manageable if you want to bet the maximum:
+    <ol>
+        <li>Declare your intention by saying "POT!"</li>
+        <li>Place enough chips in front of you to call the previous bet, before your raise.</li>
+        <LI>Count up all the chips in the pot, plus the bets ahead of you for this round, plus your calling chips.</LI>
+        <LI>Add that many <i>more</i> chips to your bet.</LI>
+    </ol>
 
     
     <p>Made with ChatGPT 4o. <a href="https://chatgpt.com/share/66f30dc5-905c-8006-abdb-6b701dc1496b">Click to see how.</a></p>
