--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>We seem to prefer pot limit Texas Hold-em. "Pot limit" is a happy medium between strict "limit poker" and the wild chaos of no limit poker. When a betting round reaches you, you'll have as many as four options:</p> 
 
 <ol>
-    <LI>><strong>Check.</strong> Tapping the table is a shortcut for this. It means "no bet." If someone before you made a bet during this betting round, then you aren't allowed to check.</LI>
+    <LI><strong>Check.</strong> Tapping the table is a shortcut for this. It means "no bet." If someone before you made a bet during this betting round, then you aren't allowed to check.</LI>
     <li><strong>Call.</strong> If someone before you placed a bet, then to "call" is to wager the minimum amount that you must commit in order to stay in the hand, which is whatever the amount of the last bet made ahead of you was. </li>
     <li><strong>Raise.</strong> If you decide to commit more chips than the minimum required to stay in a hand, that's a raise. Your raise must be between the minimum and the maximum permitted amounts; more on this below. </li>
     <LI>Fold.</strong> If someone ahead of you has made a bet that is more than you want to commit, you don't have to call or raise. You can instead relinquish your cards and sit this one out. It's normal to fold most of the hands you are dealt, even before the flop. Pro tip: don't fold when you can check. </LI>
