--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <LI><strong>Check.</strong> Tapping the table is a shortcut for this. It means "no bet." If someone before you made a bet during this betting round, then you aren't allowed to check.</LI>
     <li><strong>Call.</strong> If someone before you placed a bet, then to "call" is to wager the minimum amount that you must commit in order to stay in the hand, which is whatever the amount of the last bet made ahead of you was. </li>
     <li><strong>Raise.</strong> If you decide to commit more chips than the minimum required to stay in a hand, that's a raise. Your raise must be between the minimum and the maximum permitted amounts; more on this below. </li>
-    <LI>Fold.</strong> If someone ahead of you has made a bet that is more than you want to commit, you don't have to call or raise. You can instead relinquish your cards and sit this one out. It's normal to fold most of the hands you are dealt, even before the flop. Pro tip: don't fold when you can check. </LI>
+    <LI><strong>Fold.</strong> If someone ahead of you has made a bet that is more than you want to commit, you don't have to call or raise. You can instead relinquish your cards and sit this one out. It's normal to fold most of the hands you are dealt, even before the flop. Pro tip: don't fold when you can check. </LI>
 </ol>
 
 <strong>How much can you raise?</strong> First, it's important to understand that the term "raise" refers to the increment <i>above</i> what your call would have been; it isn't necessarily the same as the total bet you're making. For example, if the action is to Frank at 10 and he bets 30, then he has raised by 20. Keep this in mind as we consider minimum and maximum raises in pot limit poker. 
