--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
 
 <strong>How much can you raise?</strong> First, it's important to understand that the term "raise" refers to the increment <i>above</i> what your call would have been; it isn't necessarily the same as the total bet you're making. For example, if the action is to Frank at 10 and he bets 30, then he has raised by 20. Keep this in mind as we consider minimum and maximum raises in pot limit poker. 
 
-    <ul>
-<li><strong>Your raise must be large enough to meaningfully increase the action.</strong> If you are making the first bet in a round, your bet must be at least the size of the big blind. If someone has raised ahead of you, then your raise must not be smaller than the previous raise. For example, Neil opens with 20¢ and Mick makes it 50, a raise of 30. Arlie doesn't have to re-raise but if he does, he must raise by no less than 30--the amount of the prior raise--to 80.</li>
-<LI><strong>"Pot limit" means your raise cannot exceed what the total size of the pot would have been <u>had you merely called</u>.</strong> We need to remember that a raise is an <i>increment</i>, not a total bet amount. For example, in the simplest case let's say Corey is first to act pre-flop after the small and big blinds, which are 5 and 10. Corey wants to raise. If he merely calls 10, the pot would total the existing blinds (5+10) plus his call of 10, totaling 25. This (25) is the maximum he can raise <i>above</i> what a call would have been (10), which he does for a total bet of 35. Wynn is next, with the option to call 35, fold, or re-raise. He's a whale with pocket aces and wants to bet the maximum. The maximum raise amount is what the pot would be after Wynn's call, which is 5+15+35+35=90. Wynn adds a raise of 90 to his call of 35, for a total bet of 125. </LI>
-    </ul>
+    <ol>
+<li><strong>Your raise must be large enough to meaningfully increase the action.</strong> 
+    <ul><li>If you are making the first bet in a round, your bet must be at least the size of the big blind.</li>
+        <LI>If someone has raised ahead of you, then your raise must not be smaller than the previous raise. For example, Neil opens with 20¢ and Mick makes it 50, a raise of 30. Arlie doesn't have to re-raise but if he does, he must raise by no less than 30--the amount of the prior raise--to 80.</li></ul>
+<LI><strong>"Pot limit" means your raise cannot exceed what the total size of the pot would have been <u>had you merely called</u>.</strong>
+<ul><LI>We need to remember that a raise is an <i>increment</i>, not a total bet amount. For example, in the simplest case let's say Corey is first to act pre-flop after the small and big blinds, which are 5 and 10. Corey wants to raise. If he merely calls 10, the pot would total the existing blinds (5+10) plus his call of 10, totaling 25. This (25) is the maximum he can raise <i>above</i> what a call would have been (10), which he does for a total bet of 35.</li>
+    <LI>Wynn is next, with the option to call 35, fold, or re-raise. He's a whale with pocket aces and wants to bet the maximum. The maximum raise amount is what the pot would be after Wynn's call, which is 5+15+35+35=90. Wynn adds a raise of 90 to his call of 35, for a total bet of 125.</li></ul> </LI>
+    </ol>
 
     It may be daunting at first to figure out how much you can bet in pot-limit. Here's how to make it manageable if you want to bet the maximum:
     <ol>
